--- a/css/nav-head.css
+++ b/css/nav-head.css
@@ -3,8 +3,8 @@ body {
 }
 
 .container {
-    display: flex;
-    justify-content: space-between;
+    display: grid;
+    grid-template-columns: 1fr 10fr 1fr;
     align-items: center;
 }
 
